--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         </div>
     </header>
 
-    <div id="fakeHr">
-        <img src="img/hr-img.png">
-    </div>
+    <hr>
 
     <main>
         <h2>Chocolate Pizza</h2>
@@ -73,11 +71,18 @@
         </div>
 
     </main>
+
     <hr>
-    <img src="img/van-pic.png">
-    <h3>Vanessa Stevenson</h3>
-    <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that’s pretty much who I am.</p>
-    <button>Share Recipe</button>
+    <div id="abtAuthor">
+        <div id="imgBio">
+            <img src="img/van-pic.png">
+            <div id="bio">
+                <h3>Vanessa Stevenson</h3>
+                <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that’s pretty much who I am.</p>
+            </div>
+        </div>
+        <button>Share Recipe</button>
+    </div>
     <hr>
     <footer>
         <img src="img/small-logo.png">
