added some divs and moved some stuff around

--- a/index.html
+++ b/index.html
@@ -34,9 +34,18 @@
     <hr>
 
     <main>
-        <h2>Chocolate Pizza</h2>
-        <p>Posted on 15 DEC 2013/Desserts</p>
-        <img src="img/print-icon.png">
+
+        <div id="headline">
+            <div id="headlineText">
+                <h2>Chocolate Pizza</h2>
+                <p>Posted on 15 DEC 2013/Desserts</p>
+            </div>
+            <div id="headlineImg">
+                <img src="img/print-icon.png" alt="print icon"> print
+            </div>
+        </div>
+
+        <div id="blogPost">
         <img src="img/choco-pizza.png">
 
         <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve Halve all
@@ -52,6 +61,8 @@
             instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the
             nuts. continue to process for +/- 10 minutes. Pour semi-frozen mixture into a Pyrex dish or glass
             Tupperware. Freeze for at least two hours before serving</p>
+
+
         <div id="ingredients">
             <img src="img/list-bg.png">
             <ul>
@@ -68,6 +79,7 @@
                 <li><input type="checkbox" />2 tbsp butter</li>
                 <li><input type="checkbox" />1 cup honey roasted pecans, roughly chopped</li>
             </ul>
+        </div>
         </div>
 
     </main>
